--- a/competitors/templates/competitors/profile.html
+++ b/competitors/templates/competitors/profile.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
     <!-- Optional theme -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
+    <!-- For Icons -->
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
     <script src="{{STATIC_URL}}competitors/js/jquery.min.js"></script>
     <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -174,16 +176,48 @@
                         
                         <div class="panel panel-default">
                             <div class="panel-heading"> 
-                                Contact Info &nbsp;&nbsp;&nbsp;
-                                    <a href="javascript:;" class="glyphicon glyphicon-pencil" aria-hidden="true"></a> 
+                                Contact Info &nbsp;&nbsp;&nbsp;                                
+                                <a ng-show="!edit" href="javascript:;" ng-click="edit=!edit" class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
+                                <a ng-show="edit" href="javascript:;" ng-click="edit=!edit" class="glyphicon glyphicon-floppy-save" aria-hidden="true"></a>  
                             </div>
                             <div class="panel-body text-left">
-                                <p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  Email: </p>
+                                <form class="form-horizontal">
+                                    <div class="form-group">
+                                        <label for="inputEmail3" class="col-sm-3 control-label cp-profile-form-label"><p><i class="fa fa-envelope-o fa-fw"></i> Email</p></label>
+                                        <div class="col-sm-9">
+                                            <p class="form-control-static" ng-show="!edit">{{currentUser.user.username}}</p>
+                                            <input ng-show="edit" type="email" class="form-control input" value="{{currentUser.user.username}}" id="inputEmail3" placeholder="Email">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="inputEmail3" class="col-sm-3 control-label cp-profile-form-label"><p><i class="fa fa-facebook-official fa-fw"></i> Facebook</p></label>
+                                        <div class="col-sm-9">
+                                            <p class="form-control-static" ng-show="!edit">{{currentUser.user.username}}</p>
+                                            <input ng-show="edit" type="email" class="form-control input" value="{{currentUser.user.username}}" id="inputEmail3" placeholder="Email">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="inputEmail3" class="col-sm-3 control-label cp-profile-form-label"><p><i class="fa fa-twitter fa-fw"></i> Twitter</p></label>
+                                        <div class="col-sm-9">
+                                            <p class="form-control-static" ng-show="!edit">{{currentUser.user.username}}</p>
+                                            <input ng-show="edit" type="email" class="form-control input" value="{{currentUser.user.username}}" id="inputEmail3" placeholder="Email">
+                                        </div>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="inputEmail3" class="col-sm-3 control-label cp-profile-form-label"><p><i class="fa fa-instagram fa-fw"></i> Intsagram</p></label>
+                                        <div class="col-sm-9">
+                                            <p class="form-control-static" ng-show="!edit">{{currentUser.user.username}}</p>
+                                            <input ng-show="edit" type="email" class="form-control input" value="{{currentUser.user.username}}" id="inputEmail3" placeholder="Email">
+                                        </div>
+                                    </div>
+
+                                </form>
+                     <!--            <p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  Email: </p>
                                 <p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  Blog: </p>
                                 <p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  Facebook: </p>
                                 <p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  Instagram: </p>
                                 <p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  Twitter: </p>
-                                <p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  MSN: </p>
+                                <p><span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>  MSN: </p> -->
                             </div>
                         </div>
                     </div>
@@ -195,7 +229,8 @@
                 <ul class="nav nav-tabs" id="tabs">
                     <li role="presentation" class="active"><a href="#tab-21"><span class="glyphicon glyphicon-user" aria-hidden="true">Favorite Teams</a></li>
                     <li role="presentation"><a href="#tab-22"><span class="glyphicon glyphicon-star" aria-hidden="true">Favorite Players</a></li>
-                </ul> 
+                </ul>
+                <br/>
                 <div class="tab-content">  
                     <div class="tab-pane active cp-profile-pane" id="tab-21">
                         {% for team in teamfollows %}
@@ -217,9 +252,22 @@
                     </div>
                     <div class="tab-pane cp-profile-pane" id="tab-22">
                         {% for player in playerfollows %}
+                            <div class="panel panel-default">
+                                <div class="panel-heading">
+                                    {{player.name}}
+                                </div>
+                                <div class="panel-body row">
+                                    <div class="col-sm-3">
+                                        <img style="width:100%;" src="{{player.icon_url}}"/>
+                                    </div>
+                                    <div class="col-sm-9">
+                                        {{player.followers.count}}
+                                    </div>
+                                </div>
+                               
+                            </div>
                         {% endfor %}
                     </div>
-                </div>
                 </div>
             </div>
             <div class="" id="friends" ng-show="friendsshow">
