img change in directive but function not angular

--- a/competitors/static/competitors/css/profile.css
+++ b/competitors/static/competitors/css/profile.css
@@ -38,22 +38,22 @@ body {
 	z-index: 1;
 }
 #imageCanvas2{
-	position: absolute;
+/*	position: absolute;*/
 	top:0;
-	left: 500px;
+/*	left: 500px;*/
 	width: 200px;
 	height: 200px;
 	z-index: 10;
 	display: inline-block;
-	margin-left: 300px;
+	/*margin-left: 300px;*/
 }
 
 #log {
 	display: none;
 	margin: 20px 0 50px;
     position: relative;
-    width: 500px;
-    height: 500px;
+/*    width: 500px;
+    height: 500px;*/
     left: 0;
     top: 0;
   }
@@ -124,12 +124,12 @@ body {
 }
 
 #upload{
-	position: absolute;
-	top:210px;
-	left: 500px;
+/*	position: absolute;*/
+/*	top:210px;*/
+/*	left: 500px;*/
 	width: 200px;
 	z-index: 10;
-	margin-left: 300px;
+/*	margin-left: 300px;*/
 }
 
 #hint{
