--- a/competitors/templates/competitors/navbar.html
+++ b/competitors/templates/competitors/navbar.html
@@ -30,7 +30,7 @@
 </nav>
 
 <div class="container">
-<nav class="navbar cp-regular-navbar" id="navbar-container" ng-controller="login">
+<nav class="navbar cp-regular-navbar" id="navbar-container">
 	    <div class="navbar-header col-xs-3 col-sm-offset-1 col-sm-3 col-md-offset-1 cp-header-container" id="logo-wrapper">
 	      	<a class="form cp-header-wrapper" href="/" id="logo">
 	      		<img ng-href="/" src="{{STATIC_URL}}competitors/img/logo1.png" alt="logo">
