--- a/competitors/templates/competitors/index.html
+++ b/competitors/templates/competitors/index.html
@@ -18,7 +18,7 @@
 	<input type="hidden" name="redirect" value="{% firstof request.path '/' %}">
 	<div id="fullpage">
 	<!-- New Nav area -->
-		<div class="section" id="first-section" data-anchor="firstPage" ng-controller="login">
+		<div class="section" id="first-section" data-anchor="firstPage">
 			{% include 'competitors/navbar.html' %}
 			<div class="col-md-offset-3 col-sm-offset-1 col-md-6 col-sm-10 col-xs-12 " id="search_bar">
 				<form role="search" method="POST" action="{% url 'search' %}">
