--- a/competitors/templates/competitors/navbar.html
+++ b/competitors/templates/competitors/navbar.html
@@ -45,7 +45,7 @@
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="navbar-collapse collapse in" id="cp-navbar-collapse" aria-expanded="false" style="height: 1px;">
+    <div class="collapse navbar-collapse" id="cp-navbar-collapse" aria-expanded="false" style="height: 1px;">
       <ul class="nav navbar-nav navbar-right">
           {% if signuppage == True %}
           <li><a class="cp-navbar-a" href="login" id="login"><small class="pull-right">Already have an account?</small></a></li>
