See #6 login controller added to directive wrapper

--- a/competitors/templates/competitors/profile.html
+++ b/competitors/templates/competitors/profile.html
@@ -19,7 +19,7 @@
 
 </head>
 <body ng-controller="profile">
-    <div id="header" ng-controller="login">
+    <div id="header">
         {% include 'competitors/navbar.html' %}
         {% csrf_token %}
     </div>
