--- a/competitors/templates/competitors/navbar.html
+++ b/competitors/templates/competitors/navbar.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all">
 <nav class="cp-smaller-navbar navbar-static-top">
 	 <div class="container-fluid">
 	    <!-- Brand and toggle get grouped for better mobile display -->
@@ -40,7 +41,7 @@
 	    	{% if homepage != True %}
 	    	<form class="form cp-header-wrapper">
 				<div class="input-group">
-	      			<input type="text" class="form-control" placeholder="Search Your Favourite...">
+	      			<input type="text" class="form-control cp-search-tp" placeholder="Search Your Favourite...">
 	      			<span class="input-group-btn">
 	        			<button class="btn btn-default" type="button"><span class="glyphicon glyphicon-search"></span></button>
 	      			</span>
@@ -70,3 +71,4 @@
 </nav>
 <login-pop ng-controller="login"></login-pop>
 </div>
+<script type="text/javascript" src="{{STATIC_URL}}competitors/js/base.js"></script>
