login remain on same page

--- a/competitors/templates/competitors/login_pop.html
+++ b/competitors/templates/competitors/login_pop.html
@@ -28,6 +28,7 @@
 					      	</div>
 						</div>
 					</div>
+					<input type="hidden" name="next" value="//redirect//">
 					{% csrf_token %}
 					<div class="form-group">
 						<div class="col-sm-offset-2 col-sm-10">
