Remove the imageupload js in profile page to disable the upload function.

--- a/competitors/templates/competitors/imgUpload.html
+++ b/competitors/templates/competitors/imgUpload.html
@@ -40,5 +40,5 @@
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
-    <script type="text/javascript" src="{{STATIC_URL}}competitors/js/profile.js"></script>
-</div><!-- /.modal -->
+<!--     <script type="text/javascript" src="{{STATIC_URL}}competitors/js/profile.js"></script>
+ --></div><!-- /.modal -->
