--- a/competitors/static/competitors/css/profile.css
+++ b/competitors/static/competitors/css/profile.css
@@ -6,8 +6,22 @@
 	padding: 0 15px;
 }
 
+.cp-profile-nav-content:hover a{
+	text-decoration: none;
+	cursor: pointer;
+	font-weight: bold;
+	color: orange!important;
+}
+
 .cp-profile-nav-content:not(:first-child){
 	border-left: 1px solid #ccc;
+}
+
+.cp-proflie-nav-content-active{
+	text-decoration: underline;
+	font-weight: bold;
+	color: orange!important;
+	
 }
 
 .cp-profile-pane{
@@ -201,6 +215,11 @@ body {
   height: 80px;
 }
 
+@media (max-width: 991px) {
+  #right-wrapper {
+    margin-top: 20px;
+  }
+}
 
 
 
