--- a/competitors/static/competitors/css/index.css
+++ b/competitors/static/competitors/css/index.css
@@ -1,28 +1,30 @@
-<<<<<<< HEAD
-/*body{
-  margin: 0;
-  min-width: 1024px;
-  background: url("/static/competitors/img/bg.jpeg") fixed;
-  background-size:100% 100%;
-}*/
-
-#section0 img{
-/*  height: 1000px;*/
-/*  background-image: url("/static/competitors/img/index-2.jpg");
-  height: 600px;*/
-/*  -webkit-background-size: cover;
+#carousel-example-generic {
+    width: 100%;
+}
+.carousel-inner .item {
+    width: 100%;
+    height: 100vh;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
-    background-position:center;*/
-=======
+}
+.ad1 {
+    background: url("/static/competitors/img/index-2.jpg") center; 
+}
+.ad2 {
+    background: url("/static/competitors/img/index-3.jpg") center; 
+}
+.ad3 {
+    background: url("/static/competitors/img/index-2.jpg") center;
+}
 /*For the first section in index page*/
 #cp-first-section {
 /*  height: 1000px;*/
-  background-image: url("/static/competitors/img/index-2.jpg");
-  height: 600px;
+  height: 100vh;
   -webkit-background-size: cover;
           background-size: cover;
   background-position: center;
->>>>>>> 8db39a5d1dc9b1bcf5ddf51f3f14f67153d0b12c
 }
 
 /*For live score*/
