--- a/competitors/templates/competitors/index.html
+++ b/competitors/templates/competitors/index.html
@@ -12,17 +12,27 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css">
   	<link rel="stylesheet" href="http://code.jquery.com/ui/1.8.18/themes/base/jquery-ui.css" type="text/css" media="all">
   	<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}competitors/css/index.css">
+  	<script src="{{STATIC_URL}}competitors/js/jquery.min.js"></script>
+  	<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+	<!-- This following line is only necessary in the case of using the plugin option `scrollOverflow:true` -->
+	<!-- <script type="text/javascript" src="{{STATIC_URL}}competitors/js/jquery.slimscroll.min.js"></script>
+	<script type="text/javascript" src="{{STATIC_URL}}competitors/js/jquery.fullPage.min.js"></script> -->
+	<!-- Latest compiled and minified JavaScript -->
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
+	<script src="{{STATIC_URL}}competitors/js/app.js"></script>
+	
 </head>
 
-<body ng-controller="index">
+<body ng-controller="index" style="background:grey">
 	<input type="hidden" name="redirect" value="{% firstof request.path '/' %}">
-	<div id="fullpage">
+	<div>
 	<!-- New Nav area -->
-		<div class="section" id="cp-first-section" data-anchor="firstPage">
+		<div id="cp-first-section" data-anchor="firstPage">
 			{% include 'competitors/navbar.html' %}
 			{% csrf_token %}
 
-			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" style="width:100%;height:1000px;">
+			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" style="width:100vw;height:100vh;z-index:1;">
 			  <!-- Indicators -->
 			  	<ol class="carousel-indicators">
 				    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -32,14 +42,17 @@
 
 			  	<!-- Wrapper for slides -->
 			  	<div class="carousel-inner" role="listbox">
-			    	<div class="item active">
-				      	<img src="static/competitors/img/index-2.jpg" style="width: 100%;height: 1000px;" alt="...">
+			    	<div class="item active ad1">
 				      	<div class="carousel-caption">
 				        	CL
 				    	</div>
 					</div>
-			    	<div class="item" style="background-image: url('/static/competitors/img/index-2.jpg');">
-				      	<img src="static/competitors/img/index-3.jpg" alt="..." style="width:100%;height: 1000px;">
+			    	<div class="item ad2">
+				      	<div class="carousel-caption">
+				        	Fake
+				    	</div>
+					</div>
+					<div class="item ad3">
 				      	<div class="carousel-caption">
 				        	Fake
 				    	</div>
@@ -65,7 +78,7 @@
 
 			
 
-			<div class="col-md-offset-3 col-sm-offset-1 col-md-6 col-sm-10 col-xs-12 " id="search_bar">
+			<div class="col-md-offset-3 col-sm-offset-1 col-md-6 col-sm-10 col-xs-12 " id="search_bar" style="position:absolute;top:45vh;z-index:2;">
 				<form role="search" method="POST" action="{% url 'search' %}">
 		    		<div class="input-group input-group-lg">
 		        		<span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
@@ -79,8 +92,7 @@
 			</div>
 		</div>
 
-		<div class="col-md-4 col-sm-3 col-xs-2" id="live-text">
-		<div class="section" id="second-section" data-anchor="secondPage">
+		<div id="second-section" data-anchor="secondPage">
 			<div class="container-fluid" id="cp-live-wrapper">
 				<div>
 					<div class="col-md-4 col-sm-3 col-xs-2" id="cp-live-text">
@@ -130,16 +142,7 @@
 	</div>
 </body>
 
-<script src="{{STATIC_URL}}competitors/js/jquery.min.js"></script>
-<script src="{{STATIC_URL}}competitors/js/jquery.easings.min.js"></script>
-<!-- This following line is only necessary in the case of using the plugin option `scrollOverflow:true` -->
-<script type="text/javascript" src="{{STATIC_URL}}competitors/js/jquery.slimscroll.min.js"></script>
-<script type="text/javascript" src="{{STATIC_URL}}competitors/js/jquery.fullPage.min.js"></script>
-<!-- Latest compiled and minified JavaScript -->
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
-<script src="{{STATIC_URL}}competitors/js/app.js"></script>
-<script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
+
 <script type="text/javascript" src="{{STATIC_URL}}competitors/js/index.js"></script>
 
 <script type="text/javascript" src="{{STATIC_URL}}competitors/js/base.js"></script>
@@ -147,30 +150,4 @@
 <script type="text/javascript" src="{{STATIC_URL}}competitors/js/controllers/login.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}competitors/js/controllers/index.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}competitors/js/directives/login_pop.js"></script>
-<script type="text/javascript">
-
-  $(document).ready(function() {
-    $('#fullpage').fullpage({
-      sectionsColor: ['#A9A9A9', '#A9A9A9'],
-      anchors: ['firstPage', 'secondPage'],
-      css3: false,
-      scrollingSpeed: 600,
-      scrollOverflow: true
-    });
-    // myvideo = $("video")[0];
-    // myvideo.muted = true;
-    // myvideo.play();
-
-    $('#mute').click(function(e) {
-      if (myvideo.muted === true) {
-        myvideo.muted = false;
-        $(this).text('Mute');
-      }
-      else {
-        myvideo.muted = true;
-        $(this).text('Unmute');
-      }
-    });
-  });
-</script>
 </html>
