See #12 code clean

--- a/competitors/templates/competitors/index.html
+++ b/competitors/templates/competitors/index.html
@@ -32,7 +32,7 @@
 			{% include 'competitors/navbar.html' %}
 			{% csrf_token %}
 
-			<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" style="width:100vw;height:100vh;z-index:1;">
+			<div id="cp-bg-carousel" class="carousel slide" data-ride="carousel" style="width:100vw;height:100vh;z-index:1;">
 			  <!-- Indicators -->
 			  	<ol class="carousel-indicators">
 				    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
