--- a/competitors/static/competitors/css/index.css
+++ b/competitors/static/competitors/css/index.css
@@ -1,7 +1,8 @@
-#carousel-example-generic {
+/*For Background Carousel*/
+#cp-bg-carousel {
     width: 100%;
 }
-.carousel-inner .item {
+#cp-bg-carousel .carousel-inner .item {
     width: 100%;
     height: 100vh;
     -webkit-background-size: cover;
@@ -9,15 +10,16 @@
     -o-background-size: cover;
     background-size: cover;
 }
-.ad1 {
+#cp-bg-carousel .ad1 {
     background: url("/static/competitors/img/index-2.jpg") center; 
 }
-.ad2 {
+#cp-bg-carousel .ad2 {
     background: url("/static/competitors/img/index-3.jpg") center; 
 }
-.ad3 {
+#cp-bg-carousel .ad3 {
     background: url("/static/competitors/img/index-2.jpg") center;
 }
+
 /*For the first section in index page*/
 #cp-first-section {
 /*  height: 1000px;*/
