--- a/competitors/templates/competitors/profile.html
+++ b/competitors/templates/competitors/profile.html
@@ -32,52 +32,6 @@
         {% endfor %}
         <!-- Image Upload html starts/ Please replace them with <img-upload></img-upload>-->
         <img-upload></img-upload>
-        <!-- <div class="modal fade" id="imgbox">
-            <div class="modal-dialog" style="width:80%;">
-                <div class="modal-content" >
-                    <div class="modal-header">
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                        <h4 class="modal-title">Change Ur Image</h4>
-                    </div>
-                    <div class="modal-body" style="padding:0 0; margin:15px 15px;";>
-                        <div id="log" class="row">
-                            <div class="col-md-8" style="padding-left:0">
-                                <canvas id="imageCanvas" >
-                                </canvas>
-                                <div id="drag">
-                                </div>
-                                <div id="drag1">
-                                </div>
-                                <div id="drag2">
-                                </div>
-                                <div id="drag3">
-                                </div>
-                                <div id="drag4">
-                                </div>
-                            </div>
-                            <div class="col-md-4" style="padding:0;">
-                                <canvas id="imageCanvas2"></canvas>
-                                <input type="hidden" name="data" id="img_url" value=""/>
-                                {% csrf_token %}
-                                <button id="upload" ng-click="save()" class="btn btn-default">Upload</button>
-                                <div id="hint">
-                                    <h4>Drag mouse to change the range of your image</h4>
-                                </div>
-                            </div>
-                        </div>
-                        <div id="instruction">
-                                <label>
-                                    Image File:
-                                </label>
-                                <input type="file" id="imageLoader" name="imageLoader" size="60" value=="Select Your Image"/>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
-        <!-- Image Upload html ends. Please replace them with <img-upload></img-upload>-->
-
-
         <div class="col-md-5" id="left-wrapper">
             <div id="img-wrapper">
                 <img  src="{{currentUser.img_url}}" width="190px" ng-click="" ng-mouseover="hoverIn()" ng-mouseleave="hoverOut()" data-toggle="modal" data-target="#imgbox"/>
@@ -131,8 +85,8 @@
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 Essential Info &nbsp;&nbsp;&nbsp;
-                                <a ng-show="!edit" href="javascript:;" ng-click="edit=!edit" class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
-                                <a ng-show="edit" href="javascript:;" ng-click="edit=!edit" class="glyphicon glyphicon-floppy-save" aria-hidden="true"></a>
+                                <a ng-show="!editPrimary" href="javascript:;" ng-click="editPrimary=!editPrimary" class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
+                                <a ng-show="editPrimary" href="javascript:;" ng-click="editPrimary=!editPrimary" class="glyphicon glyphicon-floppy-save" aria-hidden="true"></a>
 
                             </div>
 
@@ -141,29 +95,29 @@
                                     <div class="form-group">
                                         <label for="inputEmail3" class="col-sm-2 control-label cp-profile-form-label">Username</label>
                                         <div class="col-sm-9">
-                                            <p class="form-control-static" ng-show="!edit">{{currentUser.user.username}}</p>
-                                            <input ng-show="edit" type="email" class="form-control input" value="{{currentUser.user.username}}" id="inputEmail3" placeholder="Email">
+                                            <p class="form-control-static" ng-show="!editPrimary">{{currentUser.user.username}}</p>
+                                            <input ng-show="editPrimary" type="email" class="form-control input" value="{{currentUser.user.username}}" id="inputEmail3" placeholder="Email">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="inputPassword3" class="col-sm-2 control-label cp-profile-form-label">Firstname</label>
                                         <div class="col-sm-9">
-                                            <p class="form-control-static" ng-show="!edit">{{currentUser.user.first_name}}</p>
-                                            <input type="password" ng-show="edit" class="form-control" value="{{currentUser.user.first_name}}" id="inputPassword3" placeholder="Password">
+                                            <p class="form-control-static" ng-show="!editPrimary">{{currentUser.user.first_name}}</p>
+                                            <input type="password" ng-show="editPrimary" class="form-control" value="{{currentUser.user.first_name}}" id="inputPassword3" placeholder="Password">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="inputPassword3" class="col-sm-2 control-label cp-profile-form-label">Lastname</label>
                                         <div class="col-sm-9">
-                                            <p class="form-control-static" ng-show="!edit">{{currentUser.user.last_name}}</p>
-                                            <input type="password" ng-show="edit" value="{{currentUser.user.last_name}}" class="form-control" id="inputPassword3" placeholder="Password">
+                                            <p class="form-control-static" ng-show="!editPrimary">{{currentUser.user.last_name}}</p>
+                                            <input type="password" ng-show="editPrimary" value="{{currentUser.user.last_name}}" class="form-control" id="inputPassword3" placeholder="Password">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="inputPassword3" class="col-sm-2 control-label cp-profile-form-label">Birthday</label>
                                         <div class="col-sm-9">
-                                            <p class="form-control-static" ng-show="!edit">{{currentUser.user.username}}</p>
-                                            <input type="date" ng-show="edit" class="form-control" id="inputPassword3" placeholder="Password">
+                                            <p class="form-control-static" ng-show="!editPrimary">{{userprofile.birthday}}</p>
+                                            <input type="date" ng-show="editPrimary" value="{{userprofile.birthday}}" class="form-control" id="inputPassword3" placeholder="Password">
                                         </div>
                                     </div>
                                 </form>
@@ -183,37 +137,37 @@
                         <div class="panel panel-default">
                             <div class="panel-heading">
                                 Contact Info &nbsp;&nbsp;&nbsp;
-                                <a ng-show="!edit" href="javascript:;" ng-click="edit=!edit" class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
-                                <a ng-show="edit" href="javascript:;" ng-click="edit=!edit" class="glyphicon glyphicon-floppy-save" aria-hidden="true"></a>
+                                <a ng-show="!editSocial" href="javascript:;" ng-click="editSocial=!editSocial" class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
+                                <a ng-show="editSocial" href="javascript:;" ng-click="editSocial=!editSocial" class="glyphicon glyphicon-floppy-save" aria-hidden="true"></a>
                             </div>
                             <div class="panel-body text-left">
                                 <form class="form-horizontal">
                                     <div class="form-group">
                                         <label for="inputEmail3" class="col-sm-3 control-label cp-profile-form-label"><p><i class="fa fa-envelope-o fa-fw"></i> Email</p></label>
                                         <div class="col-sm-9">
-                                            <p class="form-control-static" ng-show="!edit">{{currentUser.user.username}}</p>
-                                            <input ng-show="edit" type="email" class="form-control input" value="{{currentUser.user.username}}" id="inputEmail3" placeholder="Email">
+                                            <p class="form-control-static">//social.email//</p>
+                                            <!-- input ng-show="edit" type="email" class="form-control input" value="//social.email//" id="inputEmail3" placeholder="Email"> -->
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="inputEmail3" class="col-sm-3 control-label cp-profile-form-label"><p><i class="fa fa-facebook-official fa-fw"></i> Facebook</p></label>
                                         <div class="col-sm-9">
-                                            <p class="form-control-static" ng-show="!edit">{{currentUser.user.username}}</p>
-                                            <input ng-show="edit" type="email" class="form-control input" value="{{currentUser.user.username}}" id="inputEmail3" placeholder="Email">
+                                            <p class="form-control-static" ng-show="!editSocial">//social.facebook//</p>
+                                            <input ng-show="editSocial" type="email" class="form-control input" value="//social.facebook//" id="inputEmail3" placeholder="Email">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="inputEmail3" class="col-sm-3 control-label cp-profile-form-label"><p><i class="fa fa-twitter fa-fw"></i> Twitter</p></label>
                                         <div class="col-sm-9">
-                                            <p class="form-control-static" ng-show="!edit">{{currentUser.user.username}}</p>
-                                            <input ng-show="edit" type="email" class="form-control input" value="{{currentUser.user.username}}" id="inputEmail3" placeholder="Email">
+                                            <p class="form-control-static" ng-show="!editSocial">//social.twitter//</p>
+                                            <input ng-show="editSocial" type="email" class="form-control input" value="//social.twitter//" id="inputEmail3" placeholder="Email">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="inputEmail3" class="col-sm-3 control-label cp-profile-form-label"><p><i class="fa fa-instagram fa-fw"></i> Intsagram</p></label>
                                         <div class="col-sm-9">
-                                            <p class="form-control-static" ng-show="!edit">{{currentUser.user.username}}</p>
-                                            <input ng-show="edit" type="email" class="form-control input" value="{{currentUser.user.username}}" id="inputEmail3" placeholder="Email">
+                                            <p class="form-control-static" ng-show="!editSocial">//social.instagram//</p>
+                                            <input ng-show="editSocial" type="email" class="form-control input" value="//social.instagram//" id="inputEmail3" placeholder="Email">
                                         </div>
                                     </div>
 
@@ -388,10 +342,22 @@
 <!-- <script type="text/javascript" src="{{STATIC_URL}}competitors/js/profile.js"></script> -->
 <script type="text/javascript">
 competitorsApp.controller('profile',['$scope', function($scope){
-    $scope.edit = false;
+    console.log("{{userprofile.user.email}}")
+    $scope.editPrimary = false;
+    $scope.editSocial = false;
     $scope.personalshow = true;
     $scope.favoriteshow =false;
     $scope.friendsshow =false;
+    $scope.birthday = "{{userprofile.birthday}}"
+    console.log("{{userprofile.birthday}}");
+    $scope.social = {
+        "facebook":"{{userprofile.facebook}}",
+        "google+":"{{userprofile.googleplus}}",
+        "email":"{{userprofile.user.email}}",
+        "twitter":"{{userprofile.twitter}}",
+        "instagram":"{{userprofile.instagram}}"
+    }
+
     {% if currentUser.user.username = user.username %}
         $scope.self = true;
     {% endif %}
