carousel list clickable again

--- a/competitors/templates/competitors/index.html
+++ b/competitors/templates/competitors/index.html
@@ -32,9 +32,9 @@
 			<div id="cp-bg-carousel" class="carousel slide" data-ride="carousel" style="width:100vw;height:100vh;z-index:1;">
 			  <!-- Indicators -->
 			  	<ol class="carousel-indicators">
-				    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-				    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-				    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+				    <li data-target="#cp-bg-carousel" data-slide-to="0" class="active"></li>
+				    <li data-target="#cp-bg-carousel" data-slide-to="1"></li>
+				    <li data-target="#cp-bg-carousel" data-slide-to="2" ></li>
 			  	</ol>
 
 			  	<!-- Wrapper for slides -->
