--- a/competitors/static/competitors/css/register.css
+++ b/competitors/static/competitors/css/register.css
@@ -72,7 +72,8 @@ input[type="text"],input[type="password"]{
 	border-radius: 1em;
 	box-shadow: 5px 5px 5px #888888;
 	padding-top: 5%;
-	margin-bottom: 10%;
+	margin-bottom: 5%;
+	padding-bottom: 2em;
 }
 
 @media (min-width: 769px) {
