--- a/competitors/templates/competitors/profile.html
+++ b/competitors/templates/competitors/profile.html
@@ -86,7 +86,7 @@
                             <div class="panel-heading">
                                 Essential Info &nbsp;&nbsp;&nbsp;
                                 <a ng-show="!editPrimary" href="javascript:;" ng-click="editPrimary=!editPrimary" class="glyphicon glyphicon-pencil" aria-hidden="true"></a>
-                                <a ng-show="editPrimary" href="javascript:;" ng-click="editPrimary=!editPrimary" class="glyphicon glyphicon-floppy-save" aria-hidden="true"></a>
+                                <a ng-show="editPrimary" href="javascript:;" ng-click="updateUserProfile()" class="glyphicon glyphicon-floppy-save" aria-hidden="true"></a>
 
                             </div>
 
@@ -96,28 +96,28 @@
                                         <label for="inputEmail3" class="col-sm-2 control-label cp-profile-form-label">Username</label>
                                         <div class="col-sm-9">
                                             <p class="form-control-static" ng-show="!editPrimary">{{currentUser.user.username}}</p>
-                                            <input ng-show="editPrimary" type="email" class="form-control input" value="{{currentUser.user.username}}" id="inputEmail3" placeholder="Email">
+                                            <input ng-show="editPrimary" type="text" class="form-control input userName" value="{{currentUser.user.username}}" id="inputEmail3" placeholder="{{currentUser.user.username}}">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="inputPassword3" class="col-sm-2 control-label cp-profile-form-label">Firstname</label>
                                         <div class="col-sm-9">
                                             <p class="form-control-static" ng-show="!editPrimary">{{currentUser.user.first_name}}</p>
-                                            <input type="password" ng-show="editPrimary" class="form-control" value="{{currentUser.user.first_name}}" id="inputPassword3" placeholder="Password">
+                                            <input type="text" ng-show="editPrimary" class="form-control firstName" value="{{currentUser.user.first_name}}" id="inputPassword3" placeholder="{{currentUser.user.first_name}}">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="inputPassword3" class="col-sm-2 control-label cp-profile-form-label">Lastname</label>
                                         <div class="col-sm-9">
                                             <p class="form-control-static" ng-show="!editPrimary">{{currentUser.user.last_name}}</p>
-                                            <input type="password" ng-show="editPrimary" value="{{currentUser.user.last_name}}" class="form-control" id="inputPassword3" placeholder="Password">
+                                            <input type="text" ng-show="editPrimary" value="{{currentUser.user.last_name}}" class="form-control lastName" id="inputPassword3" placeholder="{{currentUser.user.last_name}}">
                                         </div>
                                     </div>
                                     <div class="form-group">
                                         <label for="inputPassword3" class="col-sm-2 control-label cp-profile-form-label">Birthday</label>
                                         <div class="col-sm-9">
                                             <p class="form-control-static" ng-show="!editPrimary">{{userprofile.birthday}}</p>
-                                            <input type="date" ng-show="editPrimary" value="{{userprofile.birthday}}" class="form-control" id="inputPassword3" placeholder="Password">
+                                            <input type="text" ng-show="editPrimary" value="{{userprofile.birthday}}" class="birthday form-control" id="inputPassword3" placeholder="date" onfocus="(this.type='date')" onblur="(this.type='text')">
                                         </div>
                                     </div>
                                 </form>
@@ -367,6 +367,39 @@ competitorsApp.controller('profile',['$scope', function($scope){
 
     $scope.hoverOut = function(){
         console.log(325);
+    };
+
+    $scope.updateUserProfile = function(){
+        $scope.editPrimary=! $scope.editPrimary;
+        $scope.userName = document.getElementsByClassName("userName")[0].value;
+        $scope.firstName = document.getElementsByClassName("firstName")[0].value;
+        $scope.lastName = document.getElementsByClassName("lastName")[0].value;
+        $scope.birthday = document.getElementsByClassName("birthday")[0].value;
+        console.log($scope.userName);
+        console.log($scope.firstName);
+        console.log($scope.lastName);
+        console.log($scope.birthday);
+
+        angular.element.ajax({
+                  type: "post",
+                  url: "/save_pic",
+                  data: {
+                      'userAdjustedImage': file,
+                      'csrfmiddlewaretoken': token,
+                      },
+
+                  enctype: 'multipart/form-data',
+
+                  success: function() {
+                      alert("success");
+                      location.reload(true);
+                  },
+                  error: function() {
+                          alert("Oh no! There seems to have been some problem with the picture you uploaded");
+                        },
+              });
+
+
     };
 
     // $scope.save = function(){
